--- a/package.json
+++ b/package.json
@@ -12,11 +12,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.18.2",
+    "firebase-admin": "^11.10.0",
     "googleapis": "^115.0.0",
     "jsonwebtoken": "^9.0.0",
-    "nanoid": "^3.3.7",
-    "node-fetch": "^2.7.0",
-    "firebase-admin": "^11.10.0"
+    "node-fetch": "^2.7.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
