--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "firebase-admin": "^11.10.0",
     "googleapis": "^115.0.0",
     "jsonwebtoken": "^9.0.0",
-    "node-fetch": "^2.7.0"
+    "node-fetch": "^2.7.0",
+    "protobufjs": "^7.5.4"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
